--- a/src/templates/portafolio.html
+++ b/src/templates/portafolio.html
@@ -29,8 +29,8 @@
 
         <div id="sorting-and-toggle" style="display: flex; align-items: center; margin: 20px 50px;">
             <div id="sorting-options" class="sorting-options" style="margin-right: 10px; display: flex; align-items: center;">
-                <label for="sort-by" style="margin-right: 10px; font-family: 'MontserratBold'; color: #aaaaab;">Ordenar por:</label>
-                <select id="sort-by" style="padding: 10px; border-radius: 5px; border: 1px solid #ccc; font-family: 'SFUIDisplayLight';">
+                <label for="sort-by" style="margin-right: 10px; font-family: 'Nunito Sans', sans-serif; color: #aaaaab;">Ordenar por:</label>
+                <select id="sort-by" style="padding: 10px; border-radius: 5px; border: 1px solid #ccc; font-family: 'Nunito Sans', sans-serif; font-size: 15px;">
                     <option value="">Seleccionar...</option>
                     <option value="nombre-asc">Nombre (Ascendente)</option>
                     <option value="nombre-desc">Nombre (Descendente)</option>
